--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   "dependencies": {
     "helmet": "^4.1.0",
     "knex": "^0.21.5",
-    "nodemon": "^2.0.6",
+    "knex-cleaner": "^1.3.1",
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
-    "knex-cleaner": "^1.3.0"
+    "nodemon": "^2.0.6"
   },
   "license": "ISC"
 }
