--- a/package.json
+++ b/package.json
@@ -13,22 +13,25 @@
     "url": "git+https://github.com/LambdaSchool/node-api-challenge.git"
   },
   "keywords": [
-    "api",
-    "node"
+    "example",
+    "heroku"
   ],
-  "author": "Lambda School",
+  "author": "jane-doe",
   "bugs": {
     "url": "https://github.com/LambdaSchool/node-api-challenge/issues"
   },
-  "homepage": "https://github.com/LambdaSchool/node-api-challenge#readme",
+  "license": "ISC",
   "dependencies": {
     "helmet": "^4.1.0",
     "knex": "^0.21.5",
     "knex-cleaner": "^1.3.1",
     "sqlite3": "^5.0.0"
   },
+  "engines": {
+    "node": "10.x"
+  },
+  "homepage": "https://github.com/LambdaSchool/node-api-challenge#readme",
   "devDependencies": {
     "nodemon": "^2.0.6"
-  },
-  "license": "ISC"
+  }
 }
